--- a/src/main/resources/assets/smartblockplacement/lang/ru_ru.json
+++ b/src/main/resources/assets/smartblockplacement/lang/ru_ru.json
@@ -1,5 +1,5 @@
 {
-  "category.smartblockplacement.name": "Умное размещение блоков",
+  "key.category.smartblockplacement.main": "Умное размещение блоков",
   "key.smartblockplacement.switch_smart_placement": "Переключить умное размещение",
   "text.smartblockplacement.enabled_smart_placement": "Умное размещение блоков: %1$s",
   "text.smartblockplacement.true": "Включено",
